# phosphor-logging

./: .secrets.baseline  Makefile.am  README.md  elog_serialize.cpp  log_manager.cpp  log_manager.hpp  meson.build  meson.options
extensions/openpower-pels/: README.md  data_interface.cpp  data_interface.hpp  dbus_types.hpp  entry_points.cpp  json_utils.hpp  log_id.cpp  manager.cpp  meson.build  pel.cpp  pel.hpp  pel_values.cpp  phal_service_actions.cpp  pldm_interface.cpp  pldm_interface.hpp  registry.cpp  registry.hpp  repository.cpp  sbe_ffdc_handler.cpp  sbe_ffdc_handler.hpp  service_indicators.cpp  src.cpp  src.hpp  user_data_json.cpp
extensions/openpower-pels/registry/: O_component_ids.json  README.md  message_registry.json
extensions/openpower-pels/registry/schema/: schema.json
phosphor-auditlog/: alog_manager.cpp  alog_manager.hpp  alog_parser.cpp  alog_parser.hpp  alog_utils.hpp  auditlog.conf  main.cpp  main_plugin.cpp  meson.build
test/: meson.build
test/openpower-pels/: log_id_test.cpp  meson.build  mocks.hpp  pel_manager_test.cpp  pel_test.cpp  registry_test.cpp  src_test.cpp
tools/: elog-gen.py
